résolution de liens cassés

--- a/index.html
+++ b/index.html
@@ -1,57 +1,58 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <title>Site Web / Ayaya</title>
+      <meta charset="descriptions" content="" />
+      <meta charset="keywords" content="" />
+      <meta charset="author" content="Aline SIROT" />
+      <link rel="stylesheet" type="text/css" href="style/css/index.css" />
+      <link rel="icon" href="" />
+   </head>
 
-<head>
-   <meta charset="UTF-8" />
-   <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <title>Site Web / Ayaya</title>
-   <meta charset="descriptions" content="" />
-   <meta charset="keywords" content="" />
-   <meta charset="author" content="Aline SIROT" />
-   <link rel="stylesheet" type="text/css" href="style/css/index.css" />
-   <link rel="icon" href="" />
-</head>
+   <body>
+      <header>
+         <nav>
+            <ul class="nav-links">
+               <li><a href="cv/">CV & Portfolio</a></li>
+               <li><a href="blog/">Blog</a></li>
+            </ul>
+         </nav>
+      </header>
 
-<body>
-   <header>
-      <nav>
-         <ul class="nav-links">
-            <li><a href="/cv/">CV & Portfolio</a></li>
-            <li><a href="/blog/">Blog</a></li>
-         </ul>
-      </nav>
-   </header>
+      <main>
+         <section class="welcome">
+            <h1>Bienvenue sur mon site</h1>
+            <p>Découvrez mon CV, mes créations et mon blog sur divers sujets.</p>
+         </section>
+      </main>
 
-   <main>
-      <section class="welcome">
-         <h1>Bienvenue sur mon site</h1>
-         <p>Découvrez mon CV, mes créations et mon blog sur divers sujets.</p>
-      </section>
-   </main>
+      <!-- Footer -->
+      <footer id="footer">
+         <section>
+            <!-- Icons -->
+            <ul class="icons">
+               <li>
+                  <a href="https://twitter.com/AyayaHaya2" target="_blank" class="btn icon brands fab fa-twitter"><span class="label">&nbsp;Twitter</span></a>
+               </li>
+               <li>
+                  <a href="https://www.instagram.com/haya2_pallyly/" target="_blank" class="btn icon brands fab fa-instagram"><span class="label">&nbsp;Instagram</span></a>
+               </li>
+               <li>
+                  <a href="https://github.com/Haya-2/" target="_blank" class="btn icon brands fab fa-github"><span class="label">&nbsp;GitHub</span></a>
+               </li>
+               <li>
+                  <a href="https://www.linkedin.com/in/aline-sirot-6951701ba" target="_blank" class="btn icon brands fab fa-linkedin-in"><span class="label">&nbsp;LinkedIn</span></a>
+               </li>
+            </ul>
 
-   <!-- Footer -->
-   <footer id="footer">
-      <section>
-         <!-- Icons -->
-         <ul class="icons">
-            <li><a href="https://twitter.com/AyayaHaya2" target="_blank" class="btn icon brands fab fa-twitter"><span
-                     class="label">&nbsp;Twitter</span></a></li>
-            <li><a href="https://www.instagram.com/haya2_pallyly/" target="_blank"
-                  class="btn icon brands fab fa-instagram"><span class="label">&nbsp;Instagram</span></a></li>
-            <li><a href="https://github.com/Haya-2/" target="_blank" class="btn icon brands fab fa-github"><span
-                     class="label">&nbsp;GitHub</span></a></li>
-            <li><a href="https://www.linkedin.com/in/aline-sirot-6951701ba" target="_blank"
-                  class="btn icon brands fab fa-linkedin-in"><span class="label">&nbsp;LinkedIn</span></a></li>
-         </ul>
-
-         <!-- Copyright -->
-         <div class="copyright">
-            <P>&copy; Aline SIROT. Tous droits réservés</P>
-            <P>2025/2026</P>
-         </div>
-      </section>
-   </footer>
-
-</body>
-
+            <!-- Copyright -->
+            <div class="copyright">
+               <p>&copy; Aline SIROT. Tous droits réservés</p>
+               <p>2025/2026</p>
+            </div>
+         </section>
+      </footer>
+   </body>
 </html>
